# lib/api-spec/openapi.yaml
@@ -495,6 +495,10 @@ components:
         mode:
           type: string
           enum: [live, paper]
+        trailingStopMinProfitToActivate:
+          type: number
+        trailingStopLockMinProfitPercent:
+          type: number
       required:
         - totalCapitalEth
         - maxTradeAmountEth
@@ -562,6 +566,10 @@ components:
         mode:
           type: string
           enum: [live, paper]
+        trailingStopMinProfitToActivate:
+          type: number
+        trailingStopLockMinProfitPercent:
+          type: number
 
     WalletBalance:
       type: object
